language/move-lang/tests/move_check/translated_ir_tests/commands/assign_wrong_if_branch_no_else.move
fun main() {
    let x: u64;
    if (false) x = 100;
    0x0::Transaction::assert(x == 100, 42);
}

// check: COPYLOC_UNAVAILABLE_ERROR
